# lmonad-meta

./: .travis.yml  .travis.yml.tmp  Makefile  POPL19 Slides.key  README.md  llio.cabal  lmonad-lh.cabal  practice comments.txt  stack.yaml
POPL19/: Idempotence.hs  LabelInstance.hs  LabelPredImplies.hs  LabelSelectErase.hs  LabelSelectTable.hs  Labels.hs  LookupTableErase.hs  Makefile  Monotonicity.hs  NonInterference.hs  Programs.hs  ProofCombinators.hs  Purity.hs  TODO.md  TableInfoErase.hs
POPL19/DataBase/: DataBase.hs
POPL19/Simulations/: Delete.hs  DeleteAll.hs  DeleteHelpers.hs  InsertAny.hs  Predicates.hs  Pure.hs  Select.hs  TBind.hs  TDeletePgHole.hs  TToLabeled.hs  TToLabeledTVLabel.hs  TUpdate.hs  Terms.hs  UpdateRowBySMT.hs
POPL19/Terms/: Evaluation.hs  IsDBValue.hs  IsPure.hs  IsSafe.hs  IsValue.hs  Terms.hs
old/: README.md  stack.yaml
old/src/: ProofCombinators.hs  Termination.hs
old/src/Simulations/: EraseEvalErase.hs  MetaFunctions.hs  Programs.hs
old/test/: Test.hs
src/: DBValueErase.hs  EraseTableAny.hs  EraseTableAnyNothingJust.hs  HomomorphicSubst.hs  Idempotence.hs  LLIO.hs  Label.hs  LabelInstance.hs  LabelPredErase.hs  LabelPredEraseEqual.hs  LabelPredImplies.hs  LabelSelectErase.hs  LabelSelectTable.hs  LabelUpdateCheck.hs  LabelUpdateCheckNothingJust.hs  Language.hs  LookupTableErase.hs  Main.hs  MetaFunctions.hs  Monotonicity.hs  Predicates.hs  Programs.hs  Purity.hs  SafeDBValues.hs  SafeErase.hs  Simulations.hs  TODO.md  Termination.hs  llio.cabal
src/Data/: Map.hs
src/DataBase/: DataBase.hs
src/Simulations/: Delete.hs  DeleteAll.hs  DeleteHelpers.hs  EraseSubErase.hs  Helpers.hs  Insert.hs  InsertAny.hs  Predicates.hs  Select.hs  Simulations.hs  TBind.hs  TBind.works.hs  TDelete.hs  TDeleteFound.hs  TDeletePgHole.hs  TInsert.hs  TInsert0.hs  TInsertPgHole.hs  TSelect.hs  TToLabeled.hs  TToLabeledTVLabel.hs  TUnlabel.hs  TUpdate.hs  TUpdateFound.hs  TUpdateFoundNothingJust.hs  Terms.hs  Update.hs  UpdateAny.hs  UpdateAnyNothingJust.hs  UpdateNothingJust.hs  UpdateOne.hs  UpdateOneNothingJust.hs  UpdateRowBySMT.hs  Updatev2.hs
src/Terms/: Erasure.hs  Evaluation.hs  IsDBValue.hs  IsPure.hs  IsSafe.hs  IsValue.hs  Termination.hs  Terms.hs
src/src/: Determinacy.hs  LLIO.hs  Label.hs  Language.hs  MetaFunctions.hs  Misc.hs  Programs.hs  ProofCombinators.hs  Simulations.hs  Termination.hs
src/src/LiquidHaskell/: ProofCombinators.hs
src/src/Simulations/: EraseEvalErase.hs  Helpers.hs  Language.hs  MetaFunctions.hs  Programs.hs
src/test/: Main.hs  Test.hs
test/: Main.hs  Test.hs
tests/: All.hs  Delete.hs  Final.hs  Insert.hs  RunLiquid.hs  Select.hs  Test.hs  ToLabeled.hs  Update.hs
