name:                llio
version:             0.1.0.0
synopsis:            Verification of non-interference using Liquid Haskell
license:             MIT
author:              Niki Vazou and James Parker
maintainer:          nikivazou@gmail.com
category:            Theorem Proving
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

Flag testing
  Description: Enable when running tests (We can disable incomplete patterns since LH checks this).
  Manual: True
  Default: False

library
  exposed-modules:     LLIO
                       Label
                       Language
                       Programs
                       ProofCombinators
                       Determinacy
                       MetaFunctions
                       Termination
                       Simulations
                       Simulations.Programs
                       Simulations.Language
                       Simulations.EraseEvalErase
                       Simulations.EraseSubErase
                       Simulations.Helpers
                       Simulations.MetaFunctions
  build-depends:       base >=4.9 && <5, liquidhaskell
  hs-source-dirs:      src     
  default-language:    Haskell98

executable lmonad-meta-exe
  hs-source-dirs:      test
  build-depends:       base >=4.9 && <5, liquidhaskell, llio
  main-is:             Main.hs
  default-language:    Haskell98

test-suite tests
  default-language:  Haskell98
  build-depends:     base >=4.9 && <5, process
  type:              exitcode-stdio-1.0
  hs-source-dirs:    test
  main-is:           Test.hs
