name:                llio
version:             0.1.0.0
synopsis:            Verification of non-interference using Liquid Haskell
license:             MIT
license-file:        LICENSE
author:              Niki Vazou
maintainer:          nikivazou@gmail.com
category:            Theorem Proving
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     LLIO   
  build-depends:       base >=4.9 && <4.10, liquidhaskell
  hs-source-dirs:      src
  ghc-options:         -W -Werror
  default-language:    Haskell98

test-suite tests
  default-language:  Haskell98
  build-depends:     base >=4.9 && <4.10, process
  type:              exitcode-stdio-1.0
  hs-source-dirs:    src/tests
  ghc-options:       -W -Werror
  main-is:           Test.hs